[package]
name = "discloud"
rust-version = "1.63.0"
authors = ["coffee-is-power"]
repository = "https://github.com/discloud/cli-rust/"
version = "0.3.2-alpha"
edition = "2021"
description = "Blazingly fast Discloud CLI"
license = "Apache-2.0"
license-file = "LICENSE"
categories = ["command-line-utilities"]
keywords = ["discloud", "cli", "bot", "fast", "discord"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.17", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
directories = "4.0.1"
reqwest = { version = "0.11.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features=false }
sentry = {version = "0.27.0", default-features = false, features = ["rustls", "reqwest"]}
serde = { version = "1.0.145", features = ["derive"] }
spinners = "4.1.0"
walkdir = "2.3.2"
zip = "0.6.2"
