[package]
name = "discloud"
authors = ["coffee-is-power"]
repository = "https://github.com/discloud/cli-rust/"
version = "1.0.2"
edition = "2021"
description = "Blazingly fast Discloud CLI"
license = "Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["discloud", "cli", "bot", "fast", "discord"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
directories = "4.0.1"
reqwest = { version = "0.11.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features=false }
sentry = { version = "0.29.1", default-features = false, features = ["rustls", "reqwest", "tracing", "panic"] }
serde = { version = "1.0.151", features = ["derive"] }
serde-enum-str = "0.3.2"
spinners = "4.1.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15" }
walkdir = "2.3.2"
zip = "0.6.3"
[profile.release]
# Enable debug info
debug = true